cmake_minimum_required(VERSION 2.8)
PROJECT(NDServerEngine)

ADD_SUBDIRECTORY(NDShareBase)
ADD_SUBDIRECTORY(NDProtocol)
ADD_SUBDIRECTORY(NDServerShare)
ADD_SUBDIRECTORY(NDLogServer)
ADD_SUBDIRECTORY(NDLoginServer)
ADD_SUBDIRECTORY(NDWorldServer)
ADD_SUBDIRECTORY(NDDataServer)
ADD_SUBDIRECTORY(NDGameServer)
ADD_SUBDIRECTORY(NDRoomServer)
ADD_SUBDIRECTORY(NDGatewayServer)



